@@ -13,4 +13,10 @@
               - RF
               - kNN
               
+1/30/2024 - Ross continuted practice with model selection
+              - Support Vector Machine Model
+              - Naive Bayes
+          - Once models were complete, they were compared graphically and the best was used on the test data
+          
+          
           
